<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.justjava.MainActivity">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="18sp"
            android:id="@+id/name_edit_text"/>


        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/whipped_cream"
            android:paddingLeft="24dp"
            android:id="@+id/whipped_cream_checkbox"
            android:textSize="16sp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/chocolate"
            android:paddingLeft="24dp"
            android:id="@+id/chocolate_checkbox"
            android:textSize="16sp"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="-"
                android:id="@+id/decrementButton"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="2"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:id="@+id/quantity_text_view"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="+"
                android:id="@+id/incrementButton"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_summary"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="$10"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:id="@+id/order_summary_text_view"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:id="@+id/submitOrderButton"/>

    </LinearLayout>

</ScrollView>
